Use new GraphQL endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-REACT_APP_GRAPHQL_URL=https://graphql.juffalow.com/graphql
+REACT_APP_GRAPHQL_URL=https://graphql-api.juffalow.com/graphql
+REACT_APP_API_KEY=da2-dn7sjitqirdiff5g2jthgaln6a
