--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,9 @@ jobs:
     - name: Install dependencies
       run: yarn
     - name: Build
+      with:
+        REACT_APP_GRAPHQL_URL: ${{ secrets.REACT_APP_GRAPHQL_URL }}
+        REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
       run: yarn build
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
