--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "babel-plugin-relay": "^18.2.0",
+    "babel-plugin-relay": "^20.1.1",
     "bootstrap": "^5.1.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^19.0.0",
-    "react-relay": "^18.2.0",
+    "react-relay": "^20.1.1",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
-    "relay-runtime": "^18.2.0"
+    "relay-runtime": "^20.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,15 +39,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@types/node": "^22.5.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/react-relay": "^18.2.0",
+    "@types/react-relay": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
     "graphql": "^16.10.0",
-    "relay-compiler": "^18.2.0",
+    "relay-compiler": "^20.1.1",
     "relay-compiler-language-typescript": "^15.0.0",
     "typescript": "^5.7.3"
   },
@@ -55,5 +55,6 @@
     "src": "./src/",
     "schema": "./schema.graphql",
     "language": "typescript"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
