--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,12 @@ jobs:
         REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
       run: yarn build
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v5.0.0
       with:
-        aws-access-key-id: ${{ secrets.AWS_QUOTES_JUFFALOW_COM_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_QUOTES_JUFFALOW_COM_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_CONTAINER_REGISTRY_REGION }}
+        role-to-assume: ${{ secrets.AWS_ROLE }}
+        role-session-name: GitHub_to_AWS_via_FederatedOIDC
+        aws-region: ${{ secrets.AWS_REGION }}
+        audience: sts.amazonaws.com
     - name: Sync build folder with S3
       run: aws s3 sync ./build s3://juffalow-my-projects/quotes-juffalow-com
     - name: Invalidate CloudFront cache
